# WAVS

./: .env.example  .gitignore  .gitmodules  API.md  AUDIT.md  AUTHORING_COMPONENTS.md  CHANGELOG.md  CLA  CLA.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  EIGENLAYER.md  FUN_MONTH_MAKE_WAVS.md  LICENSE  LOGGING.md  PUBLISHING_AND_REGISTRY_USAGE.md  QUICKSTART.md  README.md  TESTS.md  alertmanager.yml  alerts.yml  checksums.txt  config.toml  docker-compose.yml  foundry.toml  justfile  prometheus.yml  remappings.txt  temp-bump  wasmatic-local.toml  wasmatic.toml  wavs.toml  wkg.toml
docs/: API.md  (+18 more)
examples/: Cargo.toml
examples/_helpers/: Cargo.toml
examples/_helpers/src/: trigger.rs
examples/_helpers/src/cosmos/: rpc.rs
examples/_helpers/src/ethereum/: http.rs  query.rs
examples/ai-bouncer/: README.md
examples/ai-bouncer/src/: lib.rs
examples/ai-bouncer/src/providers/: groq.rs
examples/btc-avg/: Cargo.toml
examples/btc-avg/src/: bindings.rs  coin_gecko.rs  lib.rs
examples/components/_helpers/: Cargo.toml
examples/components/_helpers/src/: lib.rs  trigger.rs
examples/components/_helpers/src/bindings/: compat.rs  mod.rs  world.rs
examples/components/_types/: Cargo.toml
examples/components/_types/src/: lib.rs
examples/components/chain-trigger-lookup/: Cargo.toml
examples/components/chain-trigger-lookup/src/: lib.rs
examples/components/cosmos-query/: Cargo.toml  README.md  starship.yaml
examples/components/cosmos-query/src/: bindings.rs  lib.rs  types.rs
examples/components/cosmos-trigger-lookup/: Cargo.toml
examples/components/cosmos-trigger-lookup/src/: bindings.rs  lib.rs
examples/components/echo-block-interval/: Cargo.toml
examples/components/echo-block-interval/src/: lib.rs
examples/components/echo-cron-interval/: Cargo.toml
examples/components/echo-cron-interval/src/: lib.rs
examples/components/echo-data/: Cargo.toml
examples/components/echo-data/src/: lib.rs
examples/components/echo-log/: Cargo.toml
examples/components/echo-log/src/: bindings.rs  lib.rs
examples/components/echo-raw/: Cargo.toml
examples/components/echo-raw/src/: bindings.rs  lib.rs
examples/components/kv-reader/: Cargo.toml
examples/components/kv-reader/src/: lib.rs
examples/components/kv-store/: Cargo.toml
examples/components/kv-store/src/: lib.rs  types.rs
examples/components/kv-writer/: Cargo.toml
examples/components/kv-writer/src/: lib.rs
examples/components/old/ai-bouncer/: Cargo.toml  README.md
examples/components/old/ai-bouncer/src/: bindings.rs  lib.rs  session.rs
examples/components/old/btc-avg/: Cargo.toml
examples/components/old/btc-avg/src/: bindings.rs  coin_gecko.rs  lib.rs
examples/components/old/composition/http-allow-list/: README.md
examples/components/permissions/: Cargo.toml
examples/components/permissions/src/: bindings.rs  lib.rs  types.rs
examples/components/simple-aggregator/: Cargo.toml
examples/components/simple-aggregator/src/: gas_oracle.rs  lib.rs  world.rs
examples/components/square/: Cargo.toml
examples/components/square/src/: bindings.rs  lib.rs  types.rs
examples/components/timer-aggregator/: Cargo.toml
examples/components/timer-aggregator/src/: lib.rs  utils.rs
examples/composition/http-allow-list/: README.md  lay3r-examples:http-allow-list@0.1.0.wasm
examples/composition/http-allow-list/http-allowed-coingecko/: Cargo.toml
examples/composition/http-allow-list/http-allowed-coingecko/src/: bindings.rs  lib.rs
examples/contracts/cosmwasm/mock/api/: Cargo.toml
examples/contracts/cosmwasm/mock/service-handler/: Cargo.toml
examples/contracts/cosmwasm/mock/service-manager/: Cargo.toml
examples/contracts/cosmwasm/mock_service_handler/: Cargo.toml
examples/contracts/cosmwasm/mock_service_handler/src/: entry.rs  lib.rs  msg.rs  solidity_types.rs  state.rs
examples/contracts/cosmwasm/mock_service_manager/: Cargo.toml
examples/contracts/cosmwasm/mock_service_manager/src/: entry.rs  lib.rs  msg.rs  state.rs
examples/contracts/cosmwasm/simple/: Cargo.toml
examples/contracts/cosmwasm/simple/src/: component.rs  event.rs  lib.rs  state.rs
examples/contracts/solidity/: LayerTrigger.sol  SimpleServiceManager.sol  SimpleSubmit.sol  SimpleTrigger.sol
examples/contracts/solidity/interfaces/: ILayerTrigger.sol  ISimpleSubmit.sol  ISimpleTrigger.sol
examples/contracts/solidity/tests/: SimpleTrigger.t.sol
examples/cosmos-query/: Cargo.toml
examples/cosmos-query/src/: lib.rs
examples/cosmos-trigger-lookup/: Cargo.toml
examples/cosmos-trigger-lookup/src/: lib.rs
examples/echo-data/: Cargo.toml
examples/echo-log/: Cargo.toml
examples/echo-log/src/: lib.rs
examples/echo-raw/: Cargo.toml
examples/echo-raw/src/: bindings.rs
examples/eth-cosmos-query/: Cargo.toml  README.md
examples/eth-cosmos-query/src/: bindings.rs  lib.rs  rpc.rs
examples/eth-event-echo/: Cargo.toml
examples/eth-event-echo/src/: bindings.rs  lib.rs
examples/eth-trigger-echo/: Cargo.toml
examples/eth-trigger-echo/src/: lib.rs
examples/eth-trigger-square/: Cargo.toml
examples/eth-trigger-square/src/: bindings.rs  lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: bindings.rs  lib.rs
examples/message-echo/: Cargo.toml
examples/message-echo/src/: lib.rs
examples/old/btc-avg/: Cargo.toml
examples/old/btc-avg/src/: coin_gecko.rs
examples/permissions/: Cargo.toml  Taskfile.yml
examples/permissions/src/: bindings.rs  lib.rs
examples/square/: Cargo.toml
examples/square/src/: bindings.rs  lib.rs
operator/: Cargo.toml
operator/src/: bindings.rs  lib.rs
sdk/cosmwasm/: Cargo.toml
sdk/cosmwasm/src/: event.rs  msg.rs
sdk/wasi/: Cargo.toml  expand.rs
sdk/wasi/src/: address.rs  any_client.rs  bindings.rs  collection.rs  lib.rs  wasi.rs
sdk/wasi/src/bindings/: compat.rs  interface.rs  mod.rs  world.rs  worlds.rs
sdk/wasi/src/cosmos/: event.rs  mod.rs  query.rs  rpc.rs
sdk/wasi/src/ethereum/: event.rs  http.rs  mod.rs  provider.rs  query.rs
wasmatic/: Cargo.toml
wasmatic/registered/: dummy.wasm  foobar.wasm
wasmatic/src/: common.rs  main.rs
(+796 files in other folders)
