[workspace]
members = [
    "packages/*",
    "examples/components/cosmos-query",
    "examples/components/chain-trigger-lookup",
    "examples/components/echo-data",
    "examples/components/square",
    "examples/components/permissions",
    "examples/components/echo-block-interval",
    "examples/components/echo-cron-interval",
    "examples/components/_helpers",
    "examples/components/_types",
    "examples/components/kv-store",
    "examples/components/simple-aggregator",
    "examples/components/timer-aggregator",
    "examples/contracts/cosmwasm/trigger/api",
    "examples/contracts/cosmwasm/trigger/simple",
    "examples/contracts/cosmwasm/mock/api",
    "examples/contracts/cosmwasm/mock/service-handler",
]
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.test]
split-debuginfo = "unpacked"

[workspace.package]
edition = "2021"
version = "2.0.0-rc.6"
license = "GPL-3.0-or-later"
authors = ["Layer Labs (Cayman)"]
repository = "https://github.com/Lay3rLabs/WAVS"
rust-version = "1.90.0"

[workspace.dependencies]
# http utilities
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
http-body-util = "0.1.3"
reqwest = { version = "0.12.23", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower = { version = "0.5.2", features = ["util"] }
url = "2.5.7"
cid = "0.11.1"
iri-string = { version = "0.7.8", features = ["serde"] }

# utoipa for OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# error handling and logging
anyhow = "1.0.100"
axum-tracing-opentelemetry = "0.32.0"
opentelemetry = { version = "0.31.0", default-features = false, features = [
    "trace",
] }
opentelemetry-jaeger-propagator = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "trace",
    "grpc-tonic",
    "metrics",
    "http-proto",
    "reqwest-blocking-client",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
tracing-opentelemetry = { version = "0.32.0", default-features = false, features = [
    "metrics",
] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# cli and config
clap = { version = "4.5.48", features = ["derive", "env", "string"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
dirs = "6.0.0"
shellexpand = "3.1.1"

# async runtime
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = "0.3.31"
ctrlc = "3.5.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
async-trait = "0.1.89"

# websocket
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }

# collections
dashmap = "6.1.0"
ordermap = "0.5.12"
bimap = { version = "0.6.3", features = ["serde"] }
slotmap = "1.0.7"

# fs
tempfile = "3.23.0"
walkdir = "2.5.0"
wildmatch = "2.5.0"

# EVM-specific dependencies
alloy-node-bindings = "1.0.37"
alloy-json-abi = "1.4.0"
alloy-primitives = { version = "1.4.0", features = ["serde"] }
alloy-provider = { version = "1.0.37", features = ["ws", "pubsub"] }
alloy-sol-types = "1.4.0"
alloy-sol-macro = { version = "1.4.0", features = ["json"] }
alloy-transport = "1.0.37"
alloy-contract = "1.0.37"
alloy-signer = "1.0.37"
alloy-signer-local = { version = "1.0.37", features = ["mnemonic"] }
alloy-network = "1.0.37"
alloy-rpc-types-eth = "1.0.37"
layer-climb = "0.8.3"
layer-climb-address = { version = "0.8.3", features = [
    "cw-storage",
    "openapi",
] }
layer-climb-config = "0.8.3"
layer-climb-cli = "0.8.3"

# Cosmos-specific dependencies
cosmwasm-schema = "3.0.2"
cosmwasm-std = { version = "3.0.2", features = ["stargate"] }
cw-storage-plus = "3.0.1"
cw2 = "3.0.0"
wstd = "0.5.6"

# WASM and WIT bindings
wasm-pkg-client = "0.12.0"
wasm-pkg-common = "0.12.0"
wasmtime = { version = "38.0.3", features = [
    "cache",
    "component-model",
    "runtime",
    "std",
] }
wasmtime-wasi = { version = "38.0.3", default-features = true }
wasmtime-wasi-http = "38.0.3"
wasmtime-wasi-tls = "38.0.3"
wit-bindgen = "0.46.0"
wavs-wasi-utils = "2.0.0"
wasip2 = "1.0.1"

# benchmarking
criterion = { version = "0.7.0", features = ["async_tokio"] }

# serialization
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "0.9.7"

# randomness
rand = "0.9.2"

# pools
deadpool = "0.12.3"

# secrets
bip39 = { version = "2.2.0", features = ["rand"] }

# hashing
sha2 = "0.10.9"
const-hex = "1.16.0"
ripemd = "0.1.3"

# database
lru = "0.16.1"

# time
chrono = "0.4.42"
cron = { version = "0.15.0", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
subtle = "2.6.1"

# utilis
cfg-if = "1.0.3"
regex = "1.11.3"
zeroize = { version = "1.8.2", features = ["derive"] }
derive-enum-all-values = "=0.1.0"
crossbeam = "0.8.4"

# versioning
semver = { version = "1.0.27", features = ["serde"] }

# local
utils = { path = "packages/utils" }
wavs = { path = "packages/wavs" }
wavs-engine = { path = "packages/engine" }
wavs-types = { path = "packages/types" }
wavs-cli = { path = "packages/cli" }
wavs-aggregator = { path = "packages/aggregator" }
wavs-benchmark-common = { path = "packages/wavs/benches/common" }
example-helpers = { path = "examples/components/_helpers" }
example-types = { path = "examples/components/_types" }
cw-wavs-mock-api = { path = "examples/contracts/cosmwasm/mock/api" }
cw-wavs-trigger-api = { path = "examples/contracts/cosmwasm/trigger/api" }
