[workspace]
members = [
  "components/cosmos-query",
  "components/chain-trigger-lookup",
  "components/echo-data",
  "components/echo-raw",
  "components/square",
  "components/permissions",
  "components/_helpers",
  # TODO - port from old/
  # "composition/http-allow-list/http-allowed-coingecko",
  # "ai-bouncer",
  # "btc-avg",

  "contracts/cosmwasm/simple",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0-rc1"
authors = ["Lay3r Labs Team"]
rust-version = "1.80.0"
repository = "https://github.com/Lay3rLabs/wasmatic"

[workspace.dependencies]
wavs-wasi-chain = { path = "../packages/wasi-chain" }
example-helpers = { path = "./components/_helpers" }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.90"
wit-bindgen-rt = {version = "0.39.0", features = ["bitflags"]}
wit-bindgen = "0.39.0"
alloy-primitives = {version = "0.8.20", features = ["serde"]}
alloy-rlp = {version = "0.3.10", features = ["derive"]}
alloy-sol-macro = {version = "0.8.20", features = ["json"]}
alloy-sol-types = "0.8.20"
alloy-rpc-types = "0.11.0"
alloy-json-rpc = "0.11.0"
alloy-provider = "0.11.0"
alloy-transport-http = "0.11.0"
alloy-transport = "0.11.0"
alloy-rpc-client = "0.11.0"
alloy-contract = "0.11.0"
layer-climb = "0.3.6"
tendermint-rpc = "0.40.1"
tendermint = { version = "0.40.1", default-features = false}
wstd = "0.5.0"
url = "2.5.3"
wasi = "0.14.0"
cosmwasm-std = {version = "2.2.0", features = ["stargate"]}
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
const-hex = "1.14.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
