[workspace]
members = [
  "components/cosmos-query",
  "components/chain-trigger-lookup",
  "components/echo-data",
  "components/echo-raw",
  "components/square",
  "components/permissions",
  "components/echo-block-interval",
  "components/_helpers",
  # TODO - port from old/
  # "composition/http-allow-list/http-allowed-coingecko",
  # "ai-bouncer",
  # "btc-avg",

  "contracts/cosmwasm/simple",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
authors = ["Lay3r Labs Team"]
rust-version = "1.80.0"
repository = "https://github.com/Lay3rLabs/wasmatic"

[workspace.dependencies]
wavs-wasi-chain = { path = "../packages/wasi-chain" }
example-helpers = { path = "./components/_helpers" }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.90"
wit-bindgen = "0.39.0"
alloy-primitives = {version = "0.8.20", features = ["serde"]}
alloy-sol-macro = {version = "0.8.20", features = ["json"]}
alloy-sol-types = "0.8.20"
alloy-provider = "0.11.0"
alloy-contract = "0.11.0"
layer-climb = "0.3.7"
wstd = "0.5.0"
url = "2.5.3"
cosmwasm-std = {version = "2.2.0", features = ["stargate"]}
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
const-hex = "1.14.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
