[workspace]
members = [
  "components/cosmos-query",
  "components/chain-trigger-lookup",
  "components/echo-data",
  "components/echo-raw",
  "components/square",
  "components/permissions",
  "components/echo-block-interval",
  "components/echo-cron-interval",
  "components/_helpers",
  # TODO - port from old/
  # "composition/http-allow-list/http-allowed-coingecko",
  # "ai-bouncer",
  # "btc-avg",

  "contracts/cosmwasm/simple",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.0-alpha.4"
authors = ["Lay3r Labs Team"]
rust-version = "1.80.0"
repository = "https://github.com/Lay3rLabs/wasmatic"

[workspace.dependencies]
wavs-wasi-utils = "0.4.0-alpha.4"
example-helpers = { path = "./components/_helpers" }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.90"
wit-bindgen = "0.39.0"
alloy-primitives = { version = "1.0.0", features = ["serde"] }
alloy-sol-macro = {version = "1.0.0", features = ["json"]}
alloy-sol-types = "1.0.0"
alloy-provider = {version = "0.14.0", features = ["anvil-node", "ws"] }
alloy-contract = "0.14.0"
alloy-network = "0.14.0"
layer-climb = "0.3.7"
wstd = "0.5.0"
url = "2.5.3"
cosmwasm-std = { version = "2.2.0", features = ["stargate"] }
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
const-hex = "1.14.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
