[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:proxy"
target = "wasi:http/proxy@0.2.0"

[package.metadata.component.dependencies]
