[package]
name = "eth-cosmos-query"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
layer-climb-proto = { workspace = true }
layer-climb-address = { workspace = true }
layer-climb-config = { workspace = true }
layer-wasi = { workspace = true }
wstd = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:eth-cosmos-query"

[package.metadata.component.target]
path = "../../wit"
world = "eth-trigger-world"

[package.metadata.component.target.dependencies]
"wasi:io" = "=0.2.0"
"wasi:clocks" = "=0.2.0"
"wasi:http" = "=0.2.0"
"wasi:random" = "=0.2.0"
"wasi:cli" = "=0.2.0"