[package]
name = "hello-world"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
alloy-primitives = {workspace = true} 
alloy-sol-macro = {workspace = true} 
alloy-sol-types = {workspace = true} 
layer-wasi = { git = "https://github.com/Lay3rLabs/avs-toolkit", version = "0.1.1" }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
url = "2.5.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:hello-world"

[package.metadata.component.target]
path = "../../wit"
world = "hello-world-world"

[package.metadata.component.target.dependencies]
"wasi:io" = "=0.2.0"
"wasi:clocks" = "=0.2.0"
"wasi:http" = "=0.2.0"
"wasi:random" = "=0.2.0"
