[package]
name = "permissions"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
layer-wasi = { git = "https://github.com/Lay3rLabs/avs-toolkit", version = "0.1.1" }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
url = "2.5.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:permissions"
target = "lay3r:avs/task-queue@0.3.0"

[package.metadata.component.dependencies]
