[package]
name = "layer-cosmwasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
cosmwasm-std = {workspace = true}
hex = {workspace = true}