[package]
name = "layer-wasi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-rt = { workspace = true }
layer-climb-proto = { workspace = true }
layer-climb-address = { workspace = true }
layer-climb-config = { workspace = true }
wstd = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint = { workspace = true }
url = { workspace = true }
wasi = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[package.metadata.component]
package = "component:eth-cosmos-query"

[package.metadata.component.target]
path = "../../../wit"
world = "wavs-helper-world"

[package.metadata.component.target.dependencies]
"wasi:io" = "=0.2.0"
"wasi:clocks" = "=0.2.0"
"wasi:http" = "=0.2.0"
"wasi:random" = "=0.2.0"
"wasi:cli" = "=0.2.0"