[package]
name = "layer-wasi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
layer-climb-proto = { workspace = true }
layer-climb-address = { workspace = true }
layer-climb-config = { workspace = true }
wstd = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint = { workspace = true }
url = { workspace = true }
wasi = { workspace = true }
wit-bindgen-rt = {workspace = true}
wit-bindgen = {workspace = true}
cosmwasm-std = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = {workspace = true }
alloy-rpc-types = {workspace = true }
alloy-json-rpc = "0.9.2"

[lib]
crate-type = ["rlib", "cdylib"]