[package]
name = "example-helpers"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = {workspace = true}
alloy-rlp = {workspace = true}
alloy-primitives = {workspace = true}
alloy-sol-macro = {workspace = true}
alloy-sol-types = {workspace = true}
alloy-contract = {workspace = true } 
layer-climb = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
cosmwasm-std = { workspace = true }
wit-bindgen = { workspace = true }
cosmos-contract-simple-example = {path = "../../contracts/cosmwasm/simple", package = "simple-example"}

[lib]
crate-type = ["rlib", "cdylib"]
