[package]
name = "chain-trigger-lookup"
edition.workspace = true
version = "0.0.1"
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = { workspace = true}
serde = { workspace = true}
wstd = { workspace = true }
example-helpers = { workspace = true }
anyhow = { workspace = true }
layer-climb = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wavs-tests:chain-trigger-lookup"
