[package]
name = "chain-trigger-lookup"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }
example-helpers = { workspace = true }
anyhow = { workspace = true }
layer-climb = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-primitives = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wavs-tests:chain-trigger-lookup"
